--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="rf.demo.uberimagesearch.ImageGridActivity"
+            android:name="rf.demo.uberimagesearch.HomeActivity"
             android:label="@string/app_name" 
             android:launchMode="singleTop">
             
@@ -39,6 +39,10 @@
               android:authorities="rf.demo.uberimagesearch.history.SearchHistoryProvider" 
               android:exported="false"/>
         
+        <provider android:name=".db.UberImagesProvider"
+      		android:authorities="rf.demo.uberimagesearch.db.webimages"
+      		android:exported="false" >
+   </provider>
           
     </application>
 
